# qt-client

./: CMakeLists.txt  main.cpp  resource.qrc
.github/workflows/: ci.yml
qss/: style.css  style2.qss
src/: CMakeLists.txt  main_window.cpp  main_window.h  presentator.cpp  presentator.h  requestMaster.cpp  requestMaster.h
src/widgets/: CircleImage.cpp  CircleImage.h  ClicableLabel.cpp  ClicableLabel.h  ProductCard.cpp  ProductCard.h  Products.cpp  Products.h
tests/: CMakeLists.txt  TestClickableLabel.cpp  TestMainWindow.cpp  TestPresentator.cpp  TestProductCard.cpp  TestProducts.cpp
tests/mock/: MockPresentator.h  MockRequestMaster.h  WrappedPresentator.h
translations/: helloworld_ru.qm  helloworld_ru.ts
